src/bindings.h

  /// Play already loaded sound identified by [hash]
  ///
  /// [soundHash] the unique sound hash of a sound
  /// [busId] the bus ID to play the sound on. 0 means the main engine.
  /// [volume] 1.0f full volume
  /// [pan] 0.0f centered
  /// [paused] 0 not paused
  /// [looping] whether to start the sound in looping state.
  /// [loopingStartAt] If looping is enabled, the loop point is, by default,
  /// the start of the stream. The loop start point can be set with this
  /// [loopingStartOffsetAt] Optional exact frame offset to restart looping
  /// from (-1 = inactive).
  /// [loopingEndOffsetAt] Optional exact frame offset to loop before
  /// (-1 = inactive).
  /// [scale] relative playback speed multiplier (1.0f = normal speed).
  /// [handle] pointer to the handle for this new sound
  /// Return the error if any and a new [handle] of this sound
  FFI_PLUGIN_EXPORT enum PlayerErrors play(
      unsigned int soundHash, unsigned int busId, float volume, float pan,
      bool paused, bool looping, double loopingStartAt, double loopingEndAt,
      int loopingStartOffsetAt, int loopingEndOffsetAt, float scale,
      unsigned int *handle);
  /// Stop already loaded sound identified by [handle] and clear it
  ///
  /// [handle]
  /// Returns [PlayerErrors.noError] if success, [PlayerErrors.backendNotInited]
  /// if the engine is not initialized, [PlayerErrors.soundHandleNotFound] if
  /// [handle] is not valid (for example the voice has already ended).
  FFI_PLUGIN_EXPORT enum PlayerErrors stop(unsigned int handle);
  /// Check if a handle is still valid.
  ///
  /// [handle] handle to check
  /// Return true if it still exists
  FFI_PLUGIN_EXPORT int getIsValidVoiceHandle(unsigned int handle);
  /// Returns the number of concurrent sounds that are playing at the moment.
  FFI_PLUGIN_EXPORT unsigned int getActiveVoiceCount();
  /// Returns the number of concurrent sounds that are playing a specific audio
  /// source.
  FFI_PLUGIN_EXPORT int countAudioSource(unsigned int soundHash);
  /// Returns the number of voices the application has told SoLoud to play.
  FFI_PLUGIN_EXPORT unsigned int getVoiceCount();
  /// Get a sound's protection state.
  FFI_PLUGIN_EXPORT bool getProtectVoice(unsigned int handle);
  /// Set a sound's protection state.
  ///
  /// Normally, if you try to play more sounds than there are voices,
  /// SoLoud will kill off the oldest playing sound to make room.
  /// This will most likely be your background music. This can be worked
  /// around by protecting the sound.
  /// If all voices are protected, the result will be undefined.
  ///
  /// [handle]  handle to check.
  /// [protect] whether to protect or not.
  FFI_PLUGIN_EXPORT void setProtectVoice(unsigned int handle, bool protect);
  /// Set the inaudible behavior of a live sound. By default,
  /// if a sound is inaudible, it's paused, and will resume when it
  /// becomes audible again. With this function you can tell SoLoud
  /// to either kill the sound if it becomes inaudible, or to keep
  /// ticking the sound even when it's inaudible.
  ///
  /// [handle]  handle to check.
  /// [mustTick] whether to keep ticking or not when the sound becomes
  /// inaudible.
  /// [kill] whether to kill the sound or not when the sound becomes inaudible.
  FFI_PLUGIN_EXPORT void setInaudibleBehavior(unsigned int handle,
                                              bool mustTick, bool kill);
  /// Get the current maximum active voice count.
  FFI_PLUGIN_EXPORT unsigned int getMaxActiveVoiceCount();
  /// Set the current maximum active voice count.
  /// If voice count is higher than the maximum active voice count,
  /// SoLoud will pick the ones with the highest volume to actually play.
  /// [maxVoiceCount] the max concurrent sounds that can be played.
  FFI_PLUGIN_EXPORT void setMaxActiveVoiceCount(unsigned int maxVoiceCount);
  /////////////////////////////////////////
  /// voice groups
  /////////////////////////////////////////

  /// Used to create a new voice group. Returns 0 if not successful.
  FFI_PLUGIN_EXPORT unsigned int createVoiceGroup();
  /// Deallocates the voice group. Does not stop the voices attached to the
  /// voice group.
  ///
  /// [handle] the group handle to destroy.
  FFI_PLUGIN_EXPORT void destroyVoiceGroup(unsigned int handle);
  /// Adds voice handle to the voice group. The voice handles can still be
  /// used separate from the group.
  /// [voiceGroupHandle] the group handle to add the new [voiceHandle].
  /// [voiceHandle] voice handle to add to the [voiceGroupHandle].
  FFI_PLUGIN_EXPORT void addVoiceToGroup(unsigned int voiceGroupHandle,
                                         unsigned int voiceHandle);
  /// Checks if the handle is a valid voice group. Does not care if the
  /// voice group is empty.
  ///
  /// [handle] the group handle to check.
  /// Return true if [handle] is a group handle.
  FFI_PLUGIN_EXPORT int isVoiceGroup(unsigned int handle);
  /// Checks whether a voice group is empty. SoLoud automatically trims
  /// the voice groups of voices that have ended, so the group may be
  /// empty even though you've added valid voice handles to it.
  ///
  /// [handle] group handle to check.
  /// Return true if the group handle doesn't have any voices.
  FFI_PLUGIN_EXPORT int isVoiceGroupEmpty(unsigned int handle);
  /////////////////////////////////////////
  /// faders & oscillators
  /////////////////////////////////////////

  /// Smoothly change the global volume over specified time.
  FFI_PLUGIN_EXPORT enum PlayerErrors fadeGlobalVolume(float to, float time);
  /// Smoothly change a channel's volume over specified time.
  FFI_PLUGIN_EXPORT enum PlayerErrors fadeVolume(unsigned int handle,
                                                 float to, float time);
  /// Smoothly change a channel's pan setting over specified time.
  FFI_PLUGIN_EXPORT enum PlayerErrors fadePan(unsigned int handle, float to,
                                              float time);
  /// Smoothly change a channel's relative play speed over specified time.
  FFI_PLUGIN_EXPORT enum PlayerErrors
  fadeRelativePlaySpeed(unsigned int handle, float to, float time);
  /// After specified time, pause the channel.
  FFI_PLUGIN_EXPORT enum PlayerErrors schedulePause(unsigned int handle,
                                                    float time);
  /// After specified time, stop the channel.
  FFI_PLUGIN_EXPORT enum PlayerErrors scheduleStop(unsigned int handle,
                                                   float time);
  /// Set fader to oscillate the volume at specified frequency.
  FFI_PLUGIN_EXPORT enum PlayerErrors
  oscillateVolume(unsigned int handle, float from, float to, float time);
  /// Set fader to oscillate the panning at specified frequency.
  FFI_PLUGIN_EXPORT enum PlayerErrors
  oscillatePan(unsigned int handle, float from, float to, float time);
  /// Set fader to oscillate the relative play speed at specified frequency.
  FFI_PLUGIN_EXPORT enum PlayerErrors
  oscillateRelativePlaySpeed(unsigned int handle, float from, float to,
                             float time);
  /// Set fader to oscillate the global volume at specified frequency.
  FFI_PLUGIN_EXPORT enum PlayerErrors oscillateGlobalVolume(float from,
                                                            float to,
                                                            float time);
  /////////////////////////////////////////
  /// Filters
  /////////////////////////////////////////

  /// Check if the given filter is active or not.
  ///
  /// [soundHash] the sound to check the filter. If this is =0 this function
  /// searches in the global filters.
  /// [busId] the bus to check the filter.
  /// If both [soundHash] and [busId] are =0 this function searches in the
  /// global filters.
  /// [filterType] filter to check.
  /// Returns [PlayerErrors.noError] if no errors and the index of
  /// the given filter (-1 if the filter is not active).
  FFI_PLUGIN_EXPORT enum PlayerErrors
  isFilterActive(unsigned int soundHash, unsigned int busId,
                 enum FilterType filterType, int *index);
  /// Get parameters names of the given filter.
  ///
  /// [filterType] filter to get param names.
  /// Returns [PlayerErrors.noError] if no errors and the list of param names.
  FFI_PLUGIN_EXPORT enum PlayerErrors
  getFilterParamNames(enum FilterType filterType, int *paramsCount,
                      char **names);
  /// Add the filter [filterType] to [soundHash]. If [soundHash]==0 the
  /// filter is added to global filters.
  ///
  /// [soundHash] the sound to add the filter to.
  /// [busId] the bus to check the filter.
  /// If both [soundHash] and [busId] are =0 this function searches in the
  /// global filters.
  /// [filterType] filter to add.
  /// Returns [PlayerErrors.noError] if no errors.
  FFI_PLUGIN_EXPORT enum PlayerErrors addFilter(unsigned int soundHash,
                                                unsigned int busId,
                                                enum FilterType filterType);
  /// Remove the filter [filterType] from [soundHash]. If [soundHash]==0 the
  /// filter is removed from the global filters.
  ///
  /// [soundHash] the sound to add the filter to.
  /// [busId] the bus to check the filter.
  /// If both [soundHash] and [busId] are =0 this function searches in the
  /// global filters.
  /// [filterType] filter to remove.
  /// Returns [PlayerErrors.noError] if no errors.
  FFI_PLUGIN_EXPORT enum PlayerErrors removeFilter(unsigned int soundHash,
                                                   unsigned int busId,
                                                   enum FilterType filterType);
  /// Set the effect parameter with id [attributeId]
  /// of [filterType] with [value] value.
  ///
  /// [handle] the handle to set the filter to. If equal to 0, the filter is
  /// applyed globally.
  /// [busId] the bus to set the filter to.
  /// If both [handle] and [busId] are =0 this function sets the global
  /// filters.
  /// [filterType] filter to modify a param.
  /// [attributeId] the attribute id of the filter to modify.
  /// [value] the value to set the attribute to.
  ///
  /// Returns [PlayerErrors.noError] if no errors.
  FFI_PLUGIN_EXPORT enum PlayerErrors setFilterParams(
      unsigned int handle, unsigned int busId, enum FilterType filterType,
      int attributeId, float value);