lib/src/bindings/flutter_soloud_ffigen.dart


/// Check if a handle is still valid.
///
/// [handle] handle to check
/// Return true if it still exists
@ffi.Native<ffi.Int Function(ffi.UnsignedInt)>()
external int getIsValidVoiceHandle(int handle);

/// Returns the number of concurrent sounds that are playing at the moment.
@ffi.Native<ffi.UnsignedInt Function()>()
external int getActiveVoiceCount();

/// Returns the number of concurrent sounds that are playing a specific audio
/// source.
@ffi.Native<ffi.Int Function(ffi.UnsignedInt)>()
external int countAudioSource(int soundHash);

/// Returns the number of voices the application has told SoLoud to play.
@ffi.Native<ffi.UnsignedInt Function()>()
external int getVoiceCount();

/// Get a sound's protection state.
@ffi.Native<ffi.Bool Function(ffi.UnsignedInt)>()
external bool getProtectVoice(int handle);

/// Set a sound's protection state.
///
/// Normally, if you try to play more sounds than there are voices,
/// SoLoud will kill off the oldest playing sound to make room.
/// This will most likely be your background music. This can be worked
/// around by protecting the sound.
/// If all voices are protected, the result will be undefined.
///
/// [handle]  handle to check.
/// [protect] whether to protect or not.
@ffi.Native<ffi.Void Function(ffi.UnsignedInt, ffi.Bool)>()
external void setProtectVoice(int handle, bool protect);

/// Set the inaudible behavior of a live sound. By default,
/// if a sound is inaudible, it's paused, and will resume when it
/// becomes audible again. With this function you can tell SoLoud
/// to either kill the sound if it becomes inaudible, or to keep
/// ticking the sound even when it's inaudible.
///
/// [handle]  handle to check.
/// [mustTick] whether to keep ticking or not when the sound becomes
/// inaudible.
/// [kill] whether to kill the sound or not when the sound becomes inaudible.
@ffi.Native<ffi.Void Function(ffi.UnsignedInt, ffi.Bool, ffi.Bool)>()
external void setInaudibleBehavior(int handle, bool mustTick, bool kill);

/// Get the current maximum active voice count.
@ffi.Native<ffi.UnsignedInt Function()>()
external int getMaxActiveVoiceCount();

/// Set the current maximum active voice count.
/// If voice count is higher than the maximum active voice count,
/// SoLoud will pick the ones with the highest volume to actually play.
/// [maxVoiceCount] the max concurrent sounds that can be played.
@ffi.Native<ffi.Void Function(ffi.UnsignedInt)>()
external void setMaxActiveVoiceCount(int maxVoiceCount);

/// Used to create a new voice group. Returns 0 if not successful.
@ffi.Native<ffi.UnsignedInt Function()>()
external int createVoiceGroup();

/// Deallocates the voice group. Does not stop the voices attached to the
/// voice group.
///
/// [handle] the group handle to destroy.
@ffi.Native<ffi.Void Function(ffi.UnsignedInt)>()
external void destroyVoiceGroup(int handle);

/// Adds voice handle to the voice group. The voice handles can still be
/// used separate from the group.
/// [voiceGroupHandle] the group handle to add the new [voiceHandle].
/// [voiceHandle] voice handle to add to the [voiceGroupHandle].
@ffi.Native<ffi.Void Function(ffi.UnsignedInt, ffi.UnsignedInt)>()
external void addVoiceToGroup(int voiceGroupHandle, int voiceHandle);

/// Checks if the handle is a valid voice group. Does not care if the
/// voice group is empty.
///
/// [handle] the group handle to check.
/// Return true if [handle] is a group handle.
@ffi.Native<ffi.Int Function(ffi.UnsignedInt)>()
external int isVoiceGroup(int handle);

/// Checks whether a voice group is empty. SoLoud automatically trims
/// the voice groups of voices that have ended, so the group may be
/// empty even though you've added valid voice handles to it.
///
/// [handle] group handle to check.
/// Return true if the group handle doesn't have any voices.
@ffi.Native<ffi.Int Function(ffi.UnsignedInt)>()
external int isVoiceGroupEmpty(int handle);

/// Smoothly change the global volume over specified time.
@ffi.Native<ffi.UnsignedInt Function(ffi.Float, ffi.Float)>(
  symbol: 'fadeGlobalVolume',
)
external int _fadeGlobalVolume(double to, double time);

PlayerErrors fadeGlobalVolume(double to, double time) =>
    PlayerErrors.fromValue(_fadeGlobalVolume(to, time));

/// Smoothly change a channel's volume over specified time.
@ffi.Native<ffi.UnsignedInt Function(ffi.UnsignedInt, ffi.Float, ffi.Float)>(
  symbol: 'fadeVolume',
)
external int _fadeVolume(int handle, double to, double time);

PlayerErrors fadeVolume(int handle, double to, double time) =>
    PlayerErrors.fromValue(_fadeVolume(handle, to, time));

/// Smoothly change a channel's pan setting over specified time.
@ffi.Native<ffi.UnsignedInt Function(ffi.UnsignedInt, ffi.Float, ffi.Float)>(
  symbol: 'fadePan',
)
external int _fadePan(int handle, double to, double time);

PlayerErrors fadePan(int handle, double to, double time) =>
    PlayerErrors.fromValue(_fadePan(handle, to, time));

/// Smoothly change a channel's relative play speed over specified time.
@ffi.Native<ffi.UnsignedInt Function(ffi.UnsignedInt, ffi.Float, ffi.Float)>(
  symbol: 'fadeRelativePlaySpeed',
)
external int _fadeRelativePlaySpeed(int handle, double to, double time);

PlayerErrors fadeRelativePlaySpeed(int handle, double to, double time) =>
    PlayerErrors.fromValue(_fadeRelativePlaySpeed(handle, to, time));

/// After specified time, pause the channel.
@ffi.Native<ffi.UnsignedInt Function(ffi.UnsignedInt, ffi.Float)>(
  symbol: 'schedulePause',
)
external int _schedulePause(int handle, double time);

PlayerErrors schedulePause(int handle, double time) =>
    PlayerErrors.fromValue(_schedulePause(handle, time));

/// After specified time, stop the channel.
@ffi.Native<ffi.UnsignedInt Function(ffi.UnsignedInt, ffi.Float)>(
  symbol: 'scheduleStop',
)
external int _scheduleStop(int handle, double time);

PlayerErrors scheduleStop(int handle, double time) =>
    PlayerErrors.fromValue(_scheduleStop(handle, time));

/// Set fader to oscillate the volume at specified frequency.
@ffi.Native<
  ffi.UnsignedInt Function(ffi.UnsignedInt, ffi.Float, ffi.Float, ffi.Float)
>(symbol: 'oscillateVolume')
external int _oscillateVolume(int handle, double from, double to, double time);

PlayerErrors oscillateVolume(int handle, double from, double to, double time) =>
    PlayerErrors.fromValue(_oscillateVolume(handle, from, to, time));

/// Set fader to oscillate the panning at specified frequency.
@ffi.Native<
  ffi.UnsignedInt Function(ffi.UnsignedInt, ffi.Float, ffi.Float, ffi.Float)
>(symbol: 'oscillatePan')
external int _oscillatePan(int handle, double from, double to, double time);

PlayerErrors oscillatePan(int handle, double from, double to, double time) =>
    PlayerErrors.fromValue(_oscillatePan(handle, from, to, time));

/// Set fader to oscillate the relative play speed at specified frequency.
@ffi.Native<
  ffi.UnsignedInt Function(ffi.UnsignedInt, ffi.Float, ffi.Float, ffi.Float)
>(symbol: 'oscillateRelativePlaySpeed')
external int _oscillateRelativePlaySpeed(
  int handle,
  double from,
  double to,
  double time,
);

PlayerErrors oscillateRelativePlaySpeed(
  int handle,
  double from,
  double to,
  double time,
) =>
    PlayerErrors.fromValue(_oscillateRelativePlaySpeed(handle, from, to, time));

/// Set fader to oscillate the global volume at specified frequency.
@ffi.Native<ffi.UnsignedInt Function(ffi.Float, ffi.Float, ffi.Float)>(
  symbol: 'oscillateGlobalVolume',
)
external int _oscillateGlobalVolume(double from, double to, double time);

PlayerErrors oscillateGlobalVolume(double from, double to, double time) =>
    PlayerErrors.fromValue(_oscillateGlobalVolume(from, to, time));

/// Check if the given filter is active or not.
///
/// [soundHash] the sound to check the filter. If this is =0 this function
/// searches in the global filters.
/// [busId] the bus to check the filter.
/// If both [soundHash] and [busId] are =0 this function searches in the
/// global filters.
/// [filterType] filter to check.
/// Returns [PlayerErrors.noError] if no errors and the index of
/// the given filter (-1 if the filter is not active).
@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.UnsignedInt,
    ffi.UnsignedInt,
    ffi.UnsignedInt,
    ffi.Pointer<ffi.Int>,
  )
>(symbol: 'isFilterActive')
external int _isFilterActive(
  int soundHash,
  int busId,
  int filterType,
  ffi.Pointer<ffi.Int> index,
);

PlayerErrors isFilterActive(
  int soundHash,
  int busId,
  FilterType filterType,
  ffi.Pointer<ffi.Int> index,
) => PlayerErrors.fromValue(
  _isFilterActive(soundHash, busId, filterType.value, index),
);

/// Get parameters names of the given filter.
///
/// [filterType] filter to get param names.
/// Returns [PlayerErrors.noError] if no errors and the list of param names.
@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.UnsignedInt,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
  )
>(symbol: 'getFilterParamNames')
external int _getFilterParamNames(
  int filterType,
  ffi.Pointer<ffi.Int> paramsCount,
  ffi.Pointer<ffi.Pointer<ffi.Char>> names,
);

PlayerErrors getFilterParamNames(
  FilterType filterType,
  ffi.Pointer<ffi.Int> paramsCount,
  ffi.Pointer<ffi.Pointer<ffi.Char>> names,
) => PlayerErrors.fromValue(
  _getFilterParamNames(filterType.value, paramsCount, names),
);

/// Add the filter [filterType] to [soundHash]. If [soundHash]==0 the
/// filter is added to global filters.
///
/// [soundHash] the sound to add the filter to.
/// [busId] the bus to check the filter.
/// If both [soundHash] and [busId] are =0 this function searches in the
/// global filters.
/// [filterType] filter to add.
/// Returns [PlayerErrors.noError] if no errors.
@ffi.Native<
  ffi.UnsignedInt Function(ffi.UnsignedInt, ffi.UnsignedInt, ffi.UnsignedInt)
>(symbol: 'addFilter')
external int _addFilter(int soundHash, int busId, int filterType);

PlayerErrors addFilter(int soundHash, int busId, FilterType filterType) =>
    PlayerErrors.fromValue(_addFilter(soundHash, busId, filterType.value));

/// Remove the filter [filterType] from [soundHash]. If [soundHash]==0 the
/// filter is removed from the global filters.
///
/// [soundHash] the sound to add the filter to.
/// [busId] the bus to check the filter.
/// If both [soundHash] and [busId] are =0 this function searches in the
/// global filters.
/// [filterType] filter to remove.
/// Returns [PlayerErrors.noError] if no errors.
@ffi.Native<
  ffi.UnsignedInt Function(ffi.UnsignedInt, ffi.UnsignedInt, ffi.UnsignedInt)
>(symbol: 'removeFilter')
external int _removeFilter(int soundHash, int busId, int filterType);

PlayerErrors removeFilter(int soundHash, int busId, FilterType filterType) =>
    PlayerErrors.fromValue(_removeFilter(soundHash, busId, filterType.value));

/// Set the effect parameter with id [attributeId]
/// of [filterType] with [value] value.
///
/// [handle] the handle to set the filter to. If equal to 0, the filter is
/// applyed globally.
/// [busId] the bus to set the filter to.
/// If both [handle] and [busId] are =0 this function sets the global
/// filters.
/// [filterType] filter to modify a param.
/// [attributeId] the attribute id of the filter to modify.
/// [value] the value to set the attribute to.
///
/// Returns [PlayerErrors.noError] if no errors.
@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.UnsignedInt,
    ffi.UnsignedInt,
    ffi.UnsignedInt,
    ffi.Int,
    ffi.Float,
  )
>(symbol: 'setFilterParams')
external int _setFilterParams(
  int handle,
  int busId,
  int filterType,
  int attributeId,
  double value,
);

PlayerErrors setFilterParams(
  int handle,
  int busId,
  FilterType filterType,
  int attributeId,
  double value,
) => PlayerErrors.fromValue(
  _setFilterParams(handle, busId, filterType.value, attributeId, value),
);
